[gd_scene load_steps=3 format=3 uid="uid://dyswrallwpf0l"]

[ext_resource type="Script" uid="uid://din8y74ui284t" path="res://scripts/sponsor_intro.gd" id="1_0gjtw"]
[ext_resource type="FontFile" uid="uid://c6xhaklxunrpr" path="res://sprites/fonts/Press_Start_2P/PressStart2P-Regular.ttf" id="1_8ccyl"]

[node name="SponsorIntro" type="Node2D"]
script = ExtResource("1_0gjtw")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="SponsorLabel" type="Label" parent="."]
offset_right = 736.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("1_8ccyl")
theme_override_font_sizes/font_size = 32
text = "Sponsored by EDMON x AI"

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="timeout" from="TransitionTimer" to="." method="_on_transition_timer_timeout"]
